--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dayjs-business-time",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "author": "Alexsander Lira",
-  "main": "dist/index.js",
+  "main": "index.min.js",
   "types": "types/index.d.ts",
   "license": "MIT",
   "keywords": [
@@ -24,20 +24,21 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
+    "minify": "terser dist/index.js --compress --mangle --output index.min.js",
     "build": "rm -rf dist && tsc",
-    "prepublishOnly": "yarn build"
-  },
-  "dependencies": {
-    "dayjs": "^1.10.4"
+    "build:minify": "yarn build && yarn minify",
+    "prepublishOnly": "yarn build:minify"
   },
   "devDependencies": {
-    "@types/node": "^14.14.31",
     "@types/jest": "^26.0.20",
-    "typescript": "^4.2.2",
+    "@types/node": "^14.14.31",
+    "dayjs": "^1.10.4",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "terser": "^5.9.0",
     "ts-jest": "^26.5.2",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.2"
   },
   "jest": {
     "moduleFileExtensions": [
