--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,10 @@
     "lib": [
       "ESNext"
     ],
-    "typeRoots": ["./node_modules/@types", "./types"]
+    "typeRoots": [
+      "./node_modules/@types",
+      "./types"
+    ]
   },
   "exclude": [
     "node_modules",
@@ -25,5 +28,5 @@
   ],
   "ts-node": {
     "files": true
-  }
+  },
 }
