--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dayjs-business-time-advance",
-  "version": "1.0.0",
+  "name": "dayjs-business-time-advanced",
+  "version": "2.0.0",
   "author": "Edy Kurnia",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -10,14 +10,17 @@
     "date",
     "time",
     "business time",
+    "business time advanced",
     "business hours",
     "business days",
     "working time",
     "working hours",
     "working days",
+    "advanced",
     "rankmyapp",
     "edai-git",
-    "edai"
+    "edai",
+    "edai.js"
   ],
   "repository": {
     "type": "git",
